tests/ui/args-flatten-non-args.stderr
error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli1State`, the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli1State`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^
note: required by a bound in `Default`
  --> $RUST/core/src/default.rs
   |
   | pub const trait Default: Sized {
   |                          ^^^^^ required by this bound in `Default`
   = note: this error originates in the derive macro `::std::default::Default` which comes from the expansion of the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli1State`, the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli1State`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^
note: required by a bound in `ParserState`
  --> src/runtime.rs
   |
   | / pub trait ParserState: Default + ArgsVisitor {
   | |     type Output;
   | |
   | |     const RAW_ARGS_INFO: &'static RawArgsInfo = RawArgsInfo::EMPTY_REF;
...  |
   | |     fn finish(&mut self) -> Result<Self::Output>;
   | | }
   | |_^ required by this bound in `ParserState`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli1State`, the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli1State`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^
   = note: required for `Cli1State` to implement `Default`
note: required by a bound in `ParserState`
  --> src/runtime.rs
   |
   | pub trait ParserState: Default + ArgsVisitor {
   |                        ^^^^^^^ required by this bound in `ParserState`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli1State`, the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli1State`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^
note: required by a bound in `ArgsVisitor`
  --> src/runtime.rs
   |
   | / pub trait ArgsVisitor: 'static {
   | |     /// Try to accept a named argument.
   | |     ///
   | |     /// If this parser accepts named argument `name`, return `Break(argument_place)`;
...  |
   | | }
   | |_^ required by this bound in `ArgsVisitor`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli1State`, the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli1State`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^
   = note: required for `<Cli1 as palc::__private::Args>::__State` to implement `ParserState`
note: required by a bound in `palc::__private::Args::__State`
  --> src/runtime.rs
   |
   |     type __State: ParserState<Output = Self>;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Args::__State`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:12:10
   |
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:12:10
   |
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli2State`, the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli2State`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^
note: required by a bound in `Default`
  --> $RUST/core/src/default.rs
   |
   | pub const trait Default: Sized {
   |                          ^^^^^ required by this bound in `Default`
   = note: this error originates in the derive macro `::std::default::Default` which comes from the expansion of the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:12:10
   |
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli2State`, the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli2State`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^
note: required by a bound in `ParserState`
  --> src/runtime.rs
   |
   | / pub trait ParserState: Default + ArgsVisitor {
   | |     type Output;
   | |
   | |     const RAW_ARGS_INFO: &'static RawArgsInfo = RawArgsInfo::EMPTY_REF;
...  |
   | |     fn finish(&mut self) -> Result<Self::Output>;
   | | }
   | |_^ required by this bound in `ParserState`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli2State`, the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli2State`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^
   = note: required for `Cli2State` to implement `Default`
note: required by a bound in `ParserState`
  --> src/runtime.rs
   |
   | pub trait ParserState: Default + ArgsVisitor {
   |                        ^^^^^^^ required by this bound in `ParserState`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli2State`, the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli2State`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^
note: required by a bound in `ArgsVisitor`
  --> src/runtime.rs
   |
   | / pub trait ArgsVisitor: 'static {
   | |     /// Try to accept a named argument.
   | |     ///
   | |     /// If this parser accepts named argument `name`, return `Break(argument_place)`;
...  |
   | | }
   | |_^ required by this bound in `ArgsVisitor`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli2State`, the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli2State`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^
   = note: required for `<Cli2 as palc::__private::Args>::__State` to implement `ParserState`
note: required by a bound in `palc::__private::Args::__State`
  --> src/runtime.rs
   |
   |     type __State: ParserState<Output = Self>;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Args::__State`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli1State`, the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli1State`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^
   = note: the return type of a function must have a statically known size
   = note: this error originates in the derive macro `::std::default::Default` which comes from the expansion of the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:12:10
   |
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli2State`, the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli2State`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^
   = note: the return type of a function must have a statically known size
   = note: this error originates in the derive macro `::std::default::Default` which comes from the expansion of the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:7:11
   |
 7 |     deep: Deep,
   |           ^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
   = note: this error originates in the derive macro `::std::default::Default` which comes from the expansion of the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Deep` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli1State`, the trait `palc::__private::Args` is not implemented for `Deep`
  --> tests/ui/args-flatten-non-args.rs:10:1
   |
10 | struct Deep {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli1State`
  --> tests/ui/args-flatten-non-args.rs:5:8
   |
 5 | struct Cli1 {
   |        ^^^^
note: required by a bound in `RAW_ARGS_INFO`
  --> src/runtime.rs
   |
   | / pub trait ParserState: Default + ArgsVisitor {
   | |     type Output;
   | |
   | |     const RAW_ARGS_INFO: &'static RawArgsInfo = RawArgsInfo::EMPTY_REF;
...  |
   | |     fn finish(&mut self) -> Result<Self::Output>;
   | | }
   | |_^ required by this bound in `ParserState::RAW_ARGS_INFO`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:15:11
   |
15 |     deep: Subcmd,
   |           ^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:12:10
   |
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
   = note: this error originates in the derive macro `::std::default::Default` which comes from the expansion of the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot flatten `Subcmd` which is not a `palc::Args`
  --> tests/ui/args-flatten-non-args.rs:12:10
   |
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ this type is expected to have `derive(palc::Args)` but it is not
   |
help: within `Cli2State`, the trait `palc::__private::Args` is not implemented for `Subcmd`
  --> tests/ui/args-flatten-non-args.rs:19:1
   |
19 | enum Subcmd {}
   | ^^^^^^^^^^^
help: the following other types implement trait `palc::__private::Args`
  --> tests/ui/args-flatten-non-args.rs:4:10
   |
 4 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli1`
...
12 | #[derive(palc::Args)]
   |          ^^^^^^^^^^ `Cli2`
note: required because it appears within the type `Cli2State`
  --> tests/ui/args-flatten-non-args.rs:13:8
   |
13 | struct Cli2 {
   |        ^^^^
note: required by a bound in `RAW_ARGS_INFO`
  --> src/runtime.rs
   |
   | / pub trait ParserState: Default + ArgsVisitor {
   | |     type Output;
   | |
   | |     const RAW_ARGS_INFO: &'static RawArgsInfo = RawArgsInfo::EMPTY_REF;
...  |
   | |     fn finish(&mut self) -> Result<Self::Output>;
   | | }
   | |_^ required by this bound in `ParserState::RAW_ARGS_INFO`
   = note: this error originates in the derive macro `palc::Args` (in Nightly builds, run with -Z macro-backtrace for more info)
